# analise-fresno

./: README.md  album.html  basic_stats.py  cleaner.py  discografia.html  fresno.csv  fresno_limpo.csv  fresno_limpo2.csv  fresno_stats.csv  fresno_stats2.csv  letra_fresno.html  nuvem.py  pyproject.toml  scrapper.py  visual.py
