[project]
name = "analise-fresno"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dateparser>=1.2.1",
    "httpx>=0.28.1",
    "matplotlib>=3.10.3",
    "parsel>=1.10.0",
    "pip>=25.1.1",
    "polars>=1.30.0",
    "pyqt6>=6.9.1",
    "spacy>=3.8.7",
    "stopwordsiso>=0.6.1",
    "wordcloud>=1.9.4",
]
